Name:           banana-tcltk
Version:        0.0.8.1
Synopsis:       FRP for Tcl/Tk
Description:
  FRP for Tcl/Tk.
  .
  GUI is executed in separate process and use for multiple GUIs is
  possible.

Cabal-Version:  >= 1.6
License:        BSD3
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       http://bitbucket.org/Shimuuar/banana-tcltk
Category:       Data
Build-Type:     Simple

Data-files:
  tcl-bits/banana.tcl

source-repository head
  type:     hg
  location: http://bitbucket.org/Shimuuar/banana-tcltk

Library
  Ghc-options:          -Wall -fno-warn-unused-do-bind
  Build-Depends:
    base            >=3 && <5,
    containers,
    process,
    reactive-banana >= 0.7.1,
    mtl             >= 2,
    transformers    >= 0.2.2,
    contravariant,
    network,
    ansi-wl-pprint
  Exposed-modules:
    UI.Command
    UI.Dispatch
    UI.Run
    UI.Log
    UI.TclTk
    UI.TclTk.AST
    UI.TclTk.Basic
    UI.TclTk.Builder
    UI.TclTk.Dialog
    UI.TclTk.Menu
--    UI.Widget
--    UI.Widget.Choice
--    UI.Widget.List
    Reactive.Banana.Extra
  Other-modules:
    Paths_banana_tcltk
